...
"do_reply" = "Reply";

/*  */
"title_place_your_vote" = "Place your vote";

/*  */
"hint_wallet_password" = "Wallet password";

/*  */
"title_vote_ends_in" = "Vote ends in:";

/*  */
"title_rationale" = "Rationale:";
...
"label_no" = "No";

/*  */
"label_yes" = "Yes";

/*  */
"label_ok" = "OK";

/*  */
"hint_write_a_comment" = "Write a comment";

/*  */
"do_send_cap" = "SEND";
...
"do_send" = "Send";

/*  */
"label_i_agree_terms" = "I agree to the terms of the offer and take all the risks on myself";

/*  */
"hint_email_address" = "Email address";

/*  */
"hint_password" = "Password";

/*  */
"do_forgot_password" = "Forgot password?";

/*  */
"label_not_a_member_yet" = "Not a member yet?";
...
"do_privacy_policy" = "Privacy policy";

/*  */
"title_about_me" = "About me";

/*  */
"hint_full_name" = "Full Name";

/*  */
"hint_location" = "Location";

/*  */
"hint_about_you" = "About you";

/*  */
"hint_new_password" = "New password";

/*  */
"hint_confirm_password" = "Confirm password";
...
"label_already_have_an_account" = "Already have an account?";

/*  */
"do_log_in" = "Log In";

/*  */
"do_edit_profile" = "Edit Profile";

/*  */
"do_sign_out" = "Sign Out";

/*  */
"hint_stake_cpu" = "CPU amount";
...
"eos" = "EOS";

/*  */
"hint_stake_net" = "NET amount";

/*  */
"hint_transfer_receiver" = "Receiver";

/*  */
"hint_transfer_amount" = "Amount";

/*  */
"hint_transfer_memo" = "Memo";

/*  */
"title_wallet" = "Wallet";

/*  */
"title_transactions" = "Transactions";

/*  */
"title_transfer" = "Transfer";

/*  */
"title_wallet_data" = "Wallet data";

/*  */
"title_resources" = "Resources";

/*  */
"title_exchange" = "Exchange";

/*  */
"hint_eos_account_name" = "Account name (12 symbols)";

/*  */
"hint_new_wallet_password" = "New wallet password";

/*  */
"hint_confirm_wallet_password" = "Confirm wallet password";

/*  */
"do_generate_new_key" = "Generate new key";
...
"label_already_have_an_eos_account" = "Already have an EOS account?";

/*  */
"do_import_your_key" = "Import your key";

/*  */
"hint_private_key" = "Private key";

/*  */
"label_no_eos_account" = "Don't have an EOS account?";

/*  */
"do_create_account" = "Create Account";
...
"do_see_wallet_data" = "See wallet data";

/*  */
"label_import_different_key" = "Want to import different key?";

/*  */
"do_remove_key_and_start_over" = "Remove key and start over";

/*  */
"label_protected_by_privacy_policy" = "All sensitive information is protected and follows the privacy policy";

/*  */
"label_wallet_start_text" = "Add your existing EOS blockchain account or create a new one to invest in projects!";
...
"do_unstake_resources" = "UNSTAKE RESOURCES";

/*  */
"do_switch_eos_account" = "Switch account";

/*  */
"do_delete_wallet" = "Delete Wallet";

/* errors */
"error_auth_incorrectEmailLength" = "Email should be longer than 5 and shorter than 254 symbols";

/*  */
"error_auth_incorrectPasswordLength" = "Password should be longer than 5 and shorter than 50 symbols";
...
"title_preview" = "Preview";

/*  */
"title_privacy" = "Privacy Policy";

/*  */
"title_settings" = "Settings";

/* from views view code */
"title_export_private_key" = "Export private key";

/*  */
"label_export_private_key" = "Enter your password to unlock wallet";

/*  */
"do_unlock_wallet" = "Unlock";

/*  */
"error_incorrectPassword" = "Incorrect password";

/*  */
"alert_private_key_warning" = "Be careful not to share your private key with anyone!";
...
"do_sign_in_to_contribute" = "Sign in to contribute";

/*  */
"button_campaign_starts_on" = "Starts on %@";

/*  */
"alert_transaction_success" = "Transaction was successful";

/*  */
"error_wallet_enter_wallet_password" = "Enter your wallet password";

/*  */
"error_wallet_not_setup" = "You don't have your blockchain account set up";
...
"tokens_available" = "%@ available";

/*  */
"do_stake" = "Stake Resources";

/*  */
"do_import_key" = "IMPORT KEY";

/*  */
"title_import_private_key" = "Import Private Key";

/*  */
"error_enter_private_key" = "Enter your private key";
...
"title_update" = "Update";

/*  */
"title_featured" = "Invest";

/*  */
"title_profile" = "Profile";

/*  */
"label_no_comments_yet" = "No comments yet";

/*  */
"label_select_currency_cap" = "SELECT CURRENCY";
...
"title_select_account" = "Select Account";

/*  */
"alert_previously_created_eos" = "You have previously created an eos account. Please, import a private key";

/*  */
"title_select_action" = "Select action";

/*  */
"do_cancel" = "Cancel";

/*  */
"error_image_too_small" = "Selected image is too small";
...
