<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
...
                                </stackView>
                                <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" insetsLayoutMarginsFromSafeArea="NO" contentHorizontalAlignment="right" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskI
                                    <rect key="frame" x="281.5" y="45.5" width="28.5" height="28.5"/>
                                    <constraints>
                                        <constraint firstAttribute="width" secondItem="ifF-Md-iQN" secondAttribute="height" id="xp5-UC-NXz"/>
                                    </constraints>
                                    <state key="normal" image="copy"/>
                                    <connections>
                                        <action selector="copyPublicKey:" destination="-1" eventType="touchUpInside" id="ptn-2b-blm"/>
                                    </connections>
                                </button>
                            </subviews>
                            <constraints>
...
