...
                            <constraint firstItem="upw-DS-tNY" firstAttribute="top" secondItem="57H-uU-X4G" secondAttribute="top" id="lcN-FT-heH"/>
                            <constraint firstItem="7IX-Gi-YER" firstAttribute="top" secondItem="sYZ-qB-rjo" secondAttribute="bottom" constant="-30" id="vPe-as-fuF"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="57H-uU-X4G"/>
                    </view>
                    <navigationItem key="navigationItem" title="Your Profile" id="L5N-zz-PHZ">
                        <barButtonItem key="rightBarButtonItem" image="gear" id="hVw-8X-K7W">
                            <connections>
                                <action selector="openSettings:" destination="zmd-gF-0sA" id="2ZC-Nn-uRl"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
